Push projects to heroku
Push projects to heroku

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
-nes (20 sloc)  382 Bytes
-  
+
 version: "3"
 services:
   backend:
     build: backend
     environment:
       MONGODB_CONNECTION_STRING: "mongodb://mongodb/wtm"
-      PORT: "3000"
+      PORT: "3001"
     ports:
-      - 3000:3000
+      - 3001:3001
   frontend:
+    image: registry.heroku.com/jscc19-yasemin-frontend
     build: frontend
     environment:
       VUE_APP_API_URL: "http://localhost:3001"
@@ -17,6 +17,6 @@ services:
     ports:
       - 8080:8080
   mongodb:
-    image: mongo:4.2
+    image: mongo:4.4
     ports:
       - 27017:27017
